--- a/src/database/.gitignore
+++ b/src/database/.gitignore
@@ -1,3 +1,3 @@
 *.sqlite*
-src/database/migrations/2025_03_30_094444_add_date_to_break_times_table.php
-src/database/migrations/2025_04_01_173031_remove_date_from_break_times_table.php
+# src/database/migrations/2025_03_30_094444_add_date_to_break_times_table.php
+#  src/database/migrations/2025_04_01_173031_remove_date_from_break_times_table.php
