メール認証の修正

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 docker/mysql/data/*
-!.gitkeep
+
+
+
+src/app/Http/Controllers/DebugController.php
+
+
+src/database/migrations/2025_03_30_094444_add_date_to_break_times_table.php
+src/database/migrations/2025_04_01_173031_remove_date_from_break_times_table.php
